# dota2-scripts

./: .gitignore  AGENTS.md  Cargo.toml  KEYBINDINGS.md  LICENSE  README.md  app.manifest  app.rc  build.rs  package-lock.json  package.json
.github/workflows/: auto-tag.yml  promote-release.yml  release.yml
config/: config.toml  screen_positions.toml
docs/: bottle_optimization.md  broodmother.md  largo.md  shadow_fiend.md  soul_ring.md  tinker.md
docs/architecture/: overview.md  runtime-flow.md  state-and-dispatch.md
docs/features/: danger-detection.md  keyboard-interception.md  soul-ring.md  survivability.md  updates.md
docs/heroes/: broodmother.md  hero-template.md  huskar.md  largo.md  legion_commander.md  meepo.md  outworld_destroyer.md  shadow_fiend.md  tiny.md
docs/reference/: configuration.md  file-index.md  gsi-schema-and-usage.md
docs/workflows/: adding-a-hero.md  testing-and-debugging.md  troubleshooting.md
examples/: minimap_analyze.rs  minimap_capture.rs  mouse_test.rs
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: events.rs  ipc_types.rs  lib.rs  main.rs
src-tauri/src/commands/: config.rs  diagnostics.rs  game.rs  meepo.rs  minimap.rs  mod.rs  state.rs  updates.rs
src-ui/: index.html  package-lock.json  package.json  vite.config.ts
src-ui/src/: App.tsx
src/actions/: activity.rs  armlet.rs  auto_items.rs  bottle_optimization.rs  common.rs  danger_detector.rs  dispatcher.rs  dispel.rs  executor.rs  mod.rs  (+3 more)
tests/: gsi_handler_tests.rs  minimap_analysis_tests.rs  minimap_capture_tests.rs  rune_alerts_tests.rs
(+145 files in other folders)
