[package]
name = "dota2-scripts"
version = "0.1.0"
edition = "2021"

[lib]
name = "dota2_scripts"
path = "src/lib.rs"

[[bin]]
name = "dota2-scripts"
path = "src/main.rs"

[dependencies]
# Web server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Input simulation
enigo = "0.2"

# UI
egui = "0.29"
eframe = { version = "0.29", features = ["default"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Global hotkeys
rdev = "0.5"

# Utilities
lazy_static = "1.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
