[package]
name = "dota2-scripts-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
dota2_scripts = { path = "..", package = "dota2-scripts", default-features = false }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
